// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecurringRunDetails renders a recurring run with cron schedule 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <DetailsTable
      fields={
        Array [
          Array [
            "Description",
            "test job description",
          ],
          Array [
            "Created at",
            "9/5/2018, 4:03:02 AM",
          ],
        ]
      }
      title="Recurring run details"
    />
    <DetailsTable
      fields={
        Array [
          Array [
            "Enabled",
            "Yes",
          ],
          Array [
            "Trigger",
            "* * * 0 0 !",
          ],
          Array [
            "Max. concurrent runs",
            "50",
          ],
          Array [
            "Catchup",
            "true",
          ],
          Array [
            "Start time",
            "10/8/2018, 7:06:00 AM",
          ],
          Array [
            "End time",
            "11/9/2018, 8:07:06 AM",
          ],
        ]
      }
      title="Run trigger"
    />
    <DetailsTable
      fields={
        Array [
          Array [
            "param1",
            "value1",
          ],
        ]
      }
      title="Run parameters"
    />
  </div>
</div>
`;

exports[`RecurringRunDetails renders a recurring run with periodic schedule 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <DetailsTable
      fields={
        Array [
          Array [
            "Description",
            "test job description",
          ],
          Array [
            "Created at",
            "9/5/2018, 4:03:02 AM",
          ],
        ]
      }
      title="Recurring run details"
    />
    <DetailsTable
      fields={
        Array [
          Array [
            "Enabled",
            "Yes",
          ],
          Array [
            "Trigger",
            "Every 1 hours",
          ],
          Array [
            "Max. concurrent runs",
            "50",
          ],
          Array [
            "Catchup",
            "false",
          ],
          Array [
            "Start time",
            "10/8/2018, 7:06:00 AM",
          ],
          Array [
            "End time",
            "11/9/2018, 8:07:06 AM",
          ],
        ]
      }
      title="Run trigger"
    />
    <DetailsTable
      fields={
        Array [
          Array [
            "param1",
            "value1",
          ],
        ]
      }
      title="Run parameters"
    />
  </div>
</div>
`;
